# FontConverter

./: CMakeLists.txt  FontConverter.pro  export.cpp  export.h  export.ui  exportdialog.cpp  exportdialog.h  fontexport.cpp  fontexport.h  graphicsview.cpp  graphicsview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  symboltablemodel.h  symboltableview.cpp  symboltableview.h  tableitem.cpp  tableitem.h  tablemodel.cpp  tablemodel.h  tableview.cpp  tableview.h
src/: CMakeLists.txt  FontConverter.pri  main.cpp  mainwindow.cpp  mainwindow.h
src/Dialogs/: CMakeLists.txt  exportDialog.cpp  exportDialog.h  exportdialog.cpp  exportdialog.h  listCharactersDialog.cpp  listCharactersDialog.h
src/UI/: CMakeLists.txt  characterPropertyWidget.ui  export.ui  mainwindow.ui  symbolwidget.ui
src/UI/Dialogs/: exportDialog.ui  listCharactersDialog.ui
src/UI/Tab/: fixedCharactersPage.ui  selectedCharactersPage.ui
src/Widgets/: CMakeLists.txt  characterInfoTableItem.cpp  characterInfoTableItem.h  characterPropertyWidget.cpp  characterPropertyWidget.h  listCharactersScene.cpp  listCharactersScene.h  symboltableitem.cpp  symboltableitem.h  symbolwidget.cpp  symbolwidget.h
src/Widgets/Tab/: CMakeLists.txt  fixedCharactersPage.cpp  fixedCharactersPage.h  icharacters.h  selectedCharactersPage.cpp  selectedCharactersPage.h
src/Widgets/TableModel/: CMakeLists.txt  characterInfoTableModel.cpp  characterInfoTableModel.h  symboltablemodel.cpp  symboltablemodel.h
src/Widgets/TableView/: CMakeLists.txt  characterInfoTableView.cpp  characterInfoTableView.h  symboltableview.h
src/font/: CMakeLists.txt  fontExport.cpp  fontExport.h  fontexport.cpp  fontexport.h
